# DemoDG

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.sln  Client.vcxproj  Client.vcxproj.filters  ClientW.cpp  root_certificates.hpp
Server/: CMakeLists.txt  Server.sln  Server.vcxproj  Server.vcxproj.filters  ServerW.cpp
scripts/: Readme.test.linux  Readme.test.windows  commandEncryptage.txt  runClient.bat  runServer.bat  testFull.bat
workdir/: averell.cry  liste_clients.txt  toSend.txt  william.cry
workdir/sav/: jack.cry  joe.cry
